# Jog3K_Firmware

./: .gitmodules  Notes.txt  README.md
I2C_Host_Bridge/: platformio.ini
I2C_Host_Bridge/src/: cdc_app.c_notused  i2c_jogger.cpp  i2c_jogger.h  main.cpp  main.cpp.piohost
I2C_Host_Bridge/src/backup/: main.cpp_PIOHOSt  usbh_helper.h
Jog3K/: README.MD  platformio.ini  platformio_proj.code-workspace
Jog3K/image_converter/: disconnected.c  driller.c  erroricon.c  playbutton.c  runperson.c  stopbutton.c  turtle.c
Jog3K/include/: ManualmaticFonts.h
Jog3K/src/: Adafruit_NeoPixel.h  app_i2c.cpp  app_i2c.h  app_neopixels.cpp  app_screen.h  buttons.cpp  encoders.cpp  i2c_jogger.h  main.cpp
Jog3K_pendant/: CMakeLists.txt  README.md  app_main.cpp  app_screen.cpp  i2c_jogger.h
Jog3K_pendant/include/: descriptors.h
Jog3K_pendant/lib/: ss_oled.cpp
Jog3K_pendant/src/: jog3k.cpp  usb_descriptors.cpp
Jog3K_pendant/utils/: jog3k_hid_test.py
Python_Host/: close.py  packet_test.py  test1.py
i2c_usb_bridge/: CMakeLists.txt  app_main.c  ds4_app.c  ds4_app.h  hid_app.c  i2c_jogger.c  i2c_jogger.h  jog2k_app.c  jog2k_app.h  jog2k_hid.uf2  tusb_config.h
include/: jog3k.h  tusb_config.h
platformio_proj/I2C_Host_Bridge/: platformio.ini
platformio_proj/I2C_Host_Bridge/src/: i2c_jogger.cpp  i2c_jogger.h  main.cpp
platformio_proj/Jog3K/: README.MD  platformio.ini
platformio_proj/Jog3K/image_converter/: hare.c  laser.c  onestep.c  pausebutton.c  playbutton.c  power.c  rpm.c  stopbutton.c
platformio_proj/Jog3K/include/: ManualmaticIcons.h  ManualmaticState.h  ManualmaticUtils.h  Roboto_Condensed_Light_8.h
platformio_proj/Jog3K/src/: DisplayUtils.h  ManualmaticIcons.cpp  app_i2c.cpp  app_neopixels.cpp  app_screen.cpp  app_screen.h  buttons.cpp  buttons.h  encoders.cpp  encoders.h  i2c_jogger.h  jog3k_icons.h  main.cpp  quadrature.h
platformio_proj/Python_Host/: MachineStatusPacket.py  packet_test.py
